syntax = "proto3";

package truckgo;

option go_package = "github.com/alexandear/truckgo/grpcapi";

service OrderService {
    rpc TestFunc(TestRequest) returns (TestResponse);
}

message TestRequest {
    string message = 1;
}

message TestResponse {
    string message = 1;
}